--- a/src/bibfile.bib
+++ b/src/bibfile.bib
@@ -62,3 +62,7 @@
   title={Arm TrustZone Technology},
   howpublished={\url{https://developer.arm.com/ip-products/security-ip/trustzone}}
 }
+@misc{ias,
+  title={Intel SGX: Remote Attestation},
+  howpublished={\url{https://software.intel.com/en-us/sgx/attestation-services}}
+}
