--- a/src/bibfile.bib
+++ b/src/bibfile.bib
@@ -66,3 +66,8 @@
   title={Intel SGX: Remote Attestation},
   howpublished={\url{https://software.intel.com/en-us/sgx/attestation-services}}
 }
+@article{schindlerdistributed,
+  title={Distributed Key Generation with Ethereum Smart Contracts},
+  author={Schindler, Philipp and Judmayer, Aljosha and Stifter, Nicholas and Weippl, Edgar},
+  howpublished={\url{https://www.sqi.at/resources/Schindler-2019-CIW-Distributed-Key-Generation-with-Ethereum-Smart-Contracts.pdf}}
+}
