--- a/src/tex/3-design.tex
+++ b/src/tex/3-design.tex
@@ -107,7 +107,7 @@ Remote attestation provides a building block to verify the execution as well as 
 \begin{figure}
     \centering \footnotesize
     \includegraphics[width=.7\columnwidth]{img/pLIBRA-communication}
-    \caption{RA and communication. \zhou{as commented by W3F guy: there can be man-in-the-middle attack between user and miner so we need some certificate-like mechanism to prove the identity of miner, I think RA receipt just acts as certificate in our system.}}
+    \caption{RA and communication.}
     \label{fig:communication}
 \end{figure}
 
